test/zinc_source/compile_errors/callables/08_callable_dict_key_insert.zn
// expected-error: callables cannot be used as dict keys
fn inc(x) {
    return x + 1
}

fn main() {
    values = dict()
    values.insert(inc, 1)
    print(values.len())
}
